crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__search_not_paren_group.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"NOT (service=nginx OR service=apache) level=error\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE NOT ((("service" = ?) OR ("service" = ?))) AND "severity" BETWEEN 17 AND 20
---
params:
  0: 'nginx'
  1: 'apache'
