crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__search_or_two_services.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"service:kernel OR service:trawld\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE (("service" = ?) OR ("service" = ?))
---
params:
  0: 'kernel'
  1: 'trawld'
