crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__search_or_with_time_filter.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"service=nginx last=2h OR service=postgres\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE TRY_CAST("_time" AS TIMESTAMP) >= now()::TIMESTAMP - INTERVAL '2 hours' AND (("service" = ?) OR ("service" = ?))
---
params:
  0: 'nginx'
  1: 'postgres'
