crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__search_paren_group.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"(service=nginx OR service=apache) last=1h\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE TRY_CAST("_time" AS TIMESTAMP) >= now()::TIMESTAMP - INTERVAL '1 hours' AND (("service" = ?) OR ("service" = ?))
---
params:
  0: 'nginx'
  1: 'apache'
