crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__search_quoted_phrase.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(r#\"\"connection refused\"\"#)"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE (COALESCE("message" ILIKE ?, FALSE) OR COALESCE("_raw" ILIKE ?, FALSE))
---
params:
  0: '%connection refused%'
  1: '%connection refused%'
