crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__search_single_field_filter.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"service:nginx\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE "service" = ?
---
params:
  0: 'nginx'
