crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__search_time_filter_days.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"last=7d\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE TRY_CAST("_time" AS TIMESTAMP) >= now()::TIMESTAMP - INTERVAL '7 days'
