crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__search_wildcard_no_filter.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"*\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
